[project]
name = "Predicting-Buyer-Retention-to-Evaluate-Campaign-Effectiveness-at-Shopee-Indonesia"
version = "0.1.0"
description = "Develop a robust predictive model that accurately identifies new buyers likely to be retained, enabling Shopee Indonesia to optimize marketing campaigns by focusing on initiatives that attract high-quality, long-term buyers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
]
